# MITK-DEV

./: .gitmodules  README.md
DualMitkFourViews/: .gitignore  CMakeLists.txt  README.md  build_release.ps1  run_release.ps1
DualMitkFourViews/src/: main.cpp
mitk-2023-0528/MITK-2023.12/CMakeExternals/: ExternalProjectList.cmake  ITK.cmake  VTK.cmake
mitk-2023-0528/MITK-2023.12/Examples/MedLogin/: CMakeLists.txt  MedicalImageSoftware_20240612_MySQL_CMake.rar  files.cmake
mitk-2023-0528/MITK-2023.12/Examples/MedLogin/src/: MedLogin.cpp
mitk-2023-0528/MITK-2023.12/Modules/Core/: files.cmake
mitk-2023-0528/MITK-2023.12/Modules/Core/include/: mitkBaseRenderer.h  mitkRenderWindow.h  mitkSurfaceVtkMapper2D.h
mitk-2023-0528/MITK-2023.12/Modules/ImageStatistics/Testing/: files.cmake
mitk-2023-0528/MITK-2023.12/Modules/Multilabel/: mitkLabelSetImageVtkMapper2D.cpp  mitkLabelSetImageVtkMapper2D.h
mitk-2023-0528/MITK-2023.12/Modules/QtWidgets/include/: QmitkMultiWidgetLayoutManager.h  QmitkRenderWindow.h  QmitkRenderWindowMenu.h  QmitkStdMultiWidget.h
mitk-2023-0528/MITK-2023.12/Modules/QtWidgets/resource/: Qmitk.qrc
mitk-2023-0528/MITK-2023.12/Modules/QtWidgets/src/: QmitkMultiWidgetLayoutManager.cpp  QmitkRenderWindow.cpp  QmitkRenderWindowMenu.cpp  QmitkRenderWindowWidget.cpp  QmitkStdMultiWidget.cpp
mitk-2023-0528/MITK-2023.12/Modules/Segmentation/Algorithms/: mitkShowSegmentationAsSurface.cpp
mitk-2023-0528/MITK-2023.12/Modules/Segmentation/Interactions/: mitkTotalSegmentatorTool.cpp  mitkTotalSegmentatorTool.h
mitk-2023-0528/MITK-2023.12/Modules/SegmentationUI/Qmitk/: QmitkTotalSegmentatorToolGUI.h
mitk-2023-0528/MITK-2023.12/Plugins/org.mitk.gui.qt.login/: CMakeLists.txt  LoginviewControls.ui  files.cmake  manifest_headers.cmake  plugin.xml
(+18 files in other folders)
